--- a/Jeni-Mimi/css/base.css
+++ b/Jeni-Mimi/css/base.css
@@ -1,14 +1,76 @@
+html, body, h1, form, fieldset, legend, ol, li {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background: #fff;
-  color: #281A27;
-  font-family: sans-serif;
+  background: url('../img/orange.png');
+  font-family: 'PT Sans', sans-serif;
 }
 
-/*Links*/
-a {
-  color: grey;
+main {
+  padding: 20%;
 }
 
-a:hover {
-  color: #BD908D;
+h1 {
+  font-family: 'Sigmar One', cursive;
+  font-size: 3em;
+  text-align: center;
 }
+
+header {
+  width: 100%;
+}
+
+nav {
+  padding: 0.5em;
+  text-align: center;
+  margin-bottom: 0.5em;
+  font-size: 1.875em;
+}
+
+/*ul {
+  display: inline-block;
+}*/
+
+li {
+  display: inline-block;
+  margin-left: 1em;
+}
+
+fieldset {
+  background: url('../img/grey.png');
+  padding: 5%;
+  border-radius: 1.5em;
+  margin-bottom: 1em;
+}
+
+fieldset li {
+  list-style: none;
+  margin-bottom: 0.5em;
+}
+
+legend {
+  padding: 0.5em;
+  border-radius: 1em;
+  font-weight: bold;
+  background: white;
+  border: 0.1em green solid;
+  text-align: center;
+}
+
+button {
+  float: right;
+}
+
+form {
+  background: rgba(0,255,0, 0.5);
+  padding: 2em;
+  border-radius: 1.5em;
+}
+
+textarea {
+  width: 100%;
+  height: 10em;
+}
+
