--- a/Jeni-Mimi/css/base.css
+++ b/Jeni-Mimi/css/base.css
@@ -8,7 +8,7 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 
-main {
+article {
   padding: 20%;
 }
 
@@ -29,11 +29,7 @@ nav {
   font-size: 1.875em;
 }
 
-/*ul {
-  display: inline-block;
-}*/
-
-li {
+.nav-li {
   display: inline-block;
   margin-left: 1em;
 }
@@ -72,5 +68,14 @@ form {
 textarea {
   width: 100%;
   height: 10em;
+}
+
+label {
+  display: inline-block;
+  width: 40%;
+}
+
+input {
+  width: 45%;
 }
 
